--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,13 @@
   }
 }
 
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
